--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script id="MathJax-script" async src="/src/composables/mathjax/tex-chtml.js"></script>
+    <script type="module"  id="MathJax-script" async src="/src/composables/mathjax/tex-chtml.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
